--- a/MEAN-Posts/server/package.json
+++ b/MEAN-Posts/server/package.json
@@ -4,11 +4,14 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "start": "nodemon index.js"
+    "dev": "nodemon index.js"
   },
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.12.6",
+    "mongoose-unique-validator": "^2.0.3",
     "multer": "^1.4.2"
   },
   "devDependencies": {
