--- a/DatingApp/client/package.json
+++ b/DatingApp/client/package.json
@@ -19,9 +19,12 @@
     "@angular/platform-browser": "~11.2.10",
     "@angular/platform-browser-dynamic": "~11.2.10",
     "@angular/router": "~11.2.10",
+    "@kolkov/ngx-gallery": "^1.2.3",
     "bootstrap": "^5.0.1",
+    "bootswatch": "^5.0.2",
     "font-awesome": "^4.7.0",
     "ngx-bootstrap": "^6.2.0",
+    "ngx-toastr": "^14.0.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.3"
