--- a/DatingApp/API/appsettings.json
+++ b/DatingApp/API/appsettings.json
@@ -6,5 +6,10 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+  "CloudinarySettings": {
+    "CloudName": "dariku",
+    "ApiKey": "643612134933195",
+    "ApiSecret": "vj0rvamh7rjgYHPwdgvgU1B-EP8"
+  },
   "AllowedHosts": "*"
 }
