--- a/DatingApp/client/package.json
+++ b/DatingApp/client/package.json
@@ -12,6 +12,7 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~12.1.2",
+    "@angular/cdk": "^12.1.2",
     "@angular/common": "~12.1.2",
     "@angular/compiler": "~12.1.2",
     "@angular/core": "~12.1.2",
@@ -23,7 +24,9 @@
     "bootstrap": "^5.0.1",
     "bootswatch": "^5.0.2",
     "font-awesome": "^4.7.0",
+    "ng2-file-upload": "^1.4.0",
     "ngx-bootstrap": "^6.2.0",
+    "ngx-spinner": "^12.0.0",
     "ngx-toastr": "^14.0.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
