--- a/clips/package.json
+++ b/clips/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser-dynamic": "~13.1.0",
     "@angular/router": "~13.1.0",
     "autoprefixer": "^10.4.0",
+    "ngx-mask": "^13.1.0",
     "postcss": "^8.4.5",
     "rxjs": "~7.4.0",
     "tslib": "^2.3.0",
